--- a/srcs/index.html
+++ b/srcs/index.html
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html  >
 <head>
-	<title>Bienvenid@ a mi ft_server</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-<style type="text/css">
-	.container{
-		margin-top: 200px;
-	}
-	h1{
-		text-align: center;
-	}
-	.col-md-6{
-		text-align: center;
-	}
-	.btn{
-		padding: 10px;
-	}
-</style>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  
+  <title>ft_server</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/css/tether.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/mbr-additional.css" type="text/css">
+  
 </head>
 <body>
-<div class="container">
-	<h1>Este es mi ft_server, nigga</h1>
-	<br>
-	<div class="row">
-		<div class="col-md-6">
-				<a class="btn btn-primary" href="phpmyadmin/">phpMyAdmin</a>
-			</div>
-			<div class="col-md-6">
-				<a class="btn btn-danger" href="wordpress/">Wordpress</a>
-			</div>
-	</div>
-</div>
+  <section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+
+    <div class="container align-center">
+        <div class="row justify-content-md-center">
+            <div class="mbr-white col-md-10">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1 stroke">
+                    Bienvenid@ a mi ft_server<br></h1>
+                
+                <p class="mbr-text pb-3 mbr-fonts-style display-5 stroke">
+                    cjover-n</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="phpmyadmin/">PHPMyAdmin</a>
+                    <a class="btn btn-md btn-primary display-4" href="wordpress/">Wordpress</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+  
+  
 </body>
 </html>
